[gd_scene load_steps=28 format=3]

[ext_resource type="Script" path="res://scripts/traps/cannon.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/traps/projectiles/cannon_ball.tscn" id="2"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Cannon/Cannon Idle/1.png" id="3"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Cannon/Cannon Fire/1.png" id="4"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Cannon/Cannon Fire/2.png" id="5"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Cannon/Cannon Fire/3.png" id="6"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Cannon/Cannon Fire/4.png" id="7"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Cannon/Cannon Fire/5.png" id="8"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Cannon/Cannon Fire/6.png" id="9"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Cannon/Cannon Hit/1.png" id="10"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Cannon/Cannon Hit/2.png" id="11"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Cannon/Cannon Hit/3.png" id="12"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Cannon/Cannon Hit/4.png" id="13"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Cannon/Cannon Destroyed/1.png" id="14"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Cannon/Cannon Destroyed/2.png" id="15"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Cannon/Cannon Destroyed/3.png" id="16"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Cannon/Cannon Destroyed/4.png" id="17"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Cannon/Cannon Fire Effect/1.png" id="18"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Cannon/Cannon Fire Effect/2.png" id="19"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Cannon/Cannon Fire Effect/3.png" id="20"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Cannon/Cannon Fire Effect/4.png" id="21"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Cannon/Cannon Fire Effect/5.png" id="22"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Cannon/Cannon Fire Effect/6.png" id="23"]

[sub_resource type="SpriteFrames" id="SpriteFrames_cannon"]
animations = [{"frames": [{"duration": 1.0, "texture": ExtResource("3")}] , "loop": true, "name": &"idle", "speed": 4.0}, {"frames": [{"duration": 1.0, "texture": ExtResource("4")}, {"duration": 1.0, "texture": ExtResource("5")}, {"duration": 1.0, "texture": ExtResource("6")}, {"duration": 1.0, "texture": ExtResource("7")}, {"duration": 1.0, "texture": ExtResource("8")}, {"duration": 1.0, "texture": ExtResource("9")}], "loop": false, "name": &"fire", "speed": 10.0}, {"frames": [{"duration": 1.0, "texture": ExtResource("10")}, {"duration": 1.0, "texture": ExtResource("11")}, {"duration": 1.0, "texture": ExtResource("12")}, {"duration": 1.0, "texture": ExtResource("13")}], "loop": false, "name": &"hit", "speed": 12.0}, {"frames": [{"duration": 1.0, "texture": ExtResource("14")}, {"duration": 1.0, "texture": ExtResource("15")}, {"duration": 1.0, "texture": ExtResource("16")}, {"duration": 1.0, "texture": ExtResource("17")}], "loop": false, "name": &"death", "speed": 8.0}]

[sub_resource type="SpriteFrames" id="SpriteFrames_muzzle"]
animations = [{"frames": [{"duration": 1.0, "texture": ExtResource("18")}, {"duration": 1.0, "texture": ExtResource("19")}, {"duration": 1.0, "texture": ExtResource("20")}, {"duration": 1.0, "texture": ExtResource("21")}, {"duration": 1.0, "texture": ExtResource("22")}, {"duration": 1.0, "texture": ExtResource("23")}], "loop": false, "name": &"fire", "speed": 14.0}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_body"]
extents = Vector2(32, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_damage"]
extents = Vector2(36, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_detection"]
extents = Vector2(200, 48)

[node name="Cannon" type="StaticBody2D" groups=["trap"]]
script = ExtResource("1")
projectile_scene = ExtResource("2")
collision_layer = 1
collision_mask = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_cannon")
animation = &"idle"
autoplay = "idle"

[node name="MuzzleFlash" type="AnimatedSprite2D" parent="."]
position = Vector2(32, -18)
sprite_frames = SubResource("SpriteFrames_muzzle")
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -10)
shape = SubResource("RectangleShape2D_body")

[node name="FirePoint" type="Marker2D" parent="."]
position = Vector2(38, -18)

[node name="DetectionArea" type="Area2D" parent="."]
position = Vector2(72, -16)
collision_layer = 0
collision_mask = 1
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("RectangleShape2D_detection")

[node name="DamageArea" type="Area2D" parent="."]
position = Vector2(0, -10)
collision_layer = 0
collision_mask = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
shape = SubResource("RectangleShape2D_damage")

[node name="FireTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = false
